syntax = "proto3";

package outer.streaming;

option go_package = "go-device-controller/types/protocol/generated/proto/outer/streaming";
option java_package = "com.dogu.protocol.generated.outer.streaming";

message ScreenCaptureOption {
  // (android): available
  // (ios): ignored
  optional fixed64 bit_rate = 1;

  // (android): available
  // https://developer.android.com/reference/android/media/MediaFormat#KEY_MAX_FPS_TO_ENCODER
  //
  // (ios): ignored
  optional fixed64 max_fps = 2;

  // (android): available
  // https://developer.android.com/reference/android/media/MediaFormat#KEY_FRAME_RATE
  //
  // (ios): ignored
  optional fixed64 frame_rate = 3;

  // (android): available
  // https://developer.android.com/reference/android/media/MediaFormat#KEY_I_FRAME_INTERVAL
  //
  // (ios): ignored
  optional fixed64 frame_interval = 4;

  // (android): available
  // https://developer.android.com/reference/android/media/MediaFormat#KEY_REPEAT_PREVIOUS_FRAME_AFTER
  //
  // (ios): ignored
  optional fixed64 repeat_frame_delay = 5;

  // (android): available
  // Currently processed as height value among width x height
  // ex) 1920, 1600, 1280, 1024, 800, 640, 320
  //
  // (ios): available
  // In the case of iOS, the device changes to the available resolution preset
  // according to the input value. 2160 <= max_resolution        -> 3840x2160
  // 1080 <= max_resolution < 2160 -> 1920x1080
  //  720 <= max_resolution < 1080 -> 1280x720
  // ...                           -> 960x540
  // ...                           -> 640x480
  // ...                           -> 352x288
  // ...                           -> 320x240
  optional fixed32 max_resolution = 6;

  // If width, height is set, capture the screen with the specified size.
  // override max_resolution
  optional fixed32 width = 7;

  // If width, height is set, capture the screen with the specified size.
  // override max_resolution
  optional fixed32 height = 8;

  // Used for desktop platform
  // If pid paaed. capture pid's window
  optional int32 pid = 9;
}
